--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -58,8 +58,8 @@
 
         <!-- Header -->
         <header class="header position-relative mt-6 overflow-hidden">
-            <img src="images/decoration-star.svg" alt="" class="decoration-star position-absolute" />
-            <img src="images/decoration-star.svg" alt="" class="decoration-star-2 position-absolute" />
+            <img src="images/decoration-star.svg" alt="Decoration Stars" class="decoration-star-2 position-absolute" />
+            <img src="images/decoration-star.svg" alt="Decoration Stars" class="decoration-star position-absolute" />
             <div class="container position-relative z-3">
                 <div class="row">
                     <!-- Left Column -->
@@ -132,13 +132,13 @@
 
         <!-- Details 1 -->
         <section class="details position-relative my-6 overflow-hidden" id="details">
-            <img src="images/decoration-star.svg" alt="" class="decoration-star position-absolute" />
+            <img src="images/decoration-star.svg" alt="Decoration Stars" class="decoration-star position-absolute" />
             <div class="container position-relative z-3">
                 <div class="row">
                     <!-- Left Column -->
                     <div class="col-lg-6">
                         <div class="image-container d-flex justify-content-center">
-                            <img src="images/details-1.png" alt="" class="img-fluid">
+                            <img src="images/details-1.png" alt="Woman on Phone" class="img-fluid">
                         </div>
                     </div>
                     <!-- Left Column -->
@@ -229,7 +229,7 @@
 
         <!-- Details 2 -->
         <section class="details-2 position-relative my-6 overflow-hidden" id="details">
-            <img src="images/decoration-star.svg" alt="" class="decoration-star position-absolute" />
+            <img src="images/decoration-star.svg" alt="Decoration Stars" class="decoration-star position-absolute" />
             <div class="container position-relative z-3">
                 <div class="row">
                     <!-- Left Column -->
@@ -249,7 +249,7 @@
                     <!-- Right Column -->
                     <div class="col-lg-6">
                         <div class="image-container d-flex justify-content-center">
-                            <img src="images/details-2.png" alt="" class="img-fluid">
+                            <img src="images/details-2.png" alt="Woman on Computer" class="img-fluid">
                         </div>
                     </div>
                     <!-- Right Column -->
@@ -428,6 +428,52 @@
             </div>
         </section>
         <!-- Testimonials -->
+
+        <!-- Contact -->
+        <section class="contact my-6 position-relative" id="contact">
+            <img src="images/decoration-star.svg" alt="Decoration Stars" class="decoration-star position-absolute" />
+
+            <div class="container position-relative z-3">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6 d-none d-md-block">
+                        <div class="image-container">
+                            <img src="images/contact.png" alt="Contact Form Image" class="img-fluid" />
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <div class="text-container">
+                            <h2>Contact Us for A Quote</h2>
+
+                            <!-- Form -->
+                            <form>
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" placeholder="Enter Name" />
+                                </div>
+                                <div class="mb-3">
+                                    <input type="email" class="form-control" placeholder="Enter Email" />
+                                </div>
+                                <div class="mb-3">
+                                    <input type="tel" class="form-control" placeholder="Enter Phone" />
+                                </div>
+                                <div class="mb-3">
+                                    <textarea class="form-control" placeholder="Enter Message" rows="8"
+                                        style="resize: none;"></textarea>
+                                </div>
+                                <div class="d-grid gap-2">
+                                    <input type="text" value="Send" class="btn btn-primary btn-block" />
+                                </div>
+                            </form>
+                            <!-- Form -->
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Contact -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
