--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -17,7 +17,7 @@
         <title>Bootstrap Boilerplate</title>
     </head>
 
-    <body>
+    <body id="top">
 
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg sticky-top navbar-light">
@@ -474,6 +474,70 @@
             </div>
         </section>
         <!-- Contact -->
+
+        <!-- Footer -->
+        <footer class="footer bg-light py-6">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-4 my-3">
+                        <h6>About Yavin:</h6>
+                        <p>Yavin is an office decoration company that was founded in 2010 by a team of passionate
+                            professionals who sought to transform traditional office spaces into spaces that are
+                            creative, inspiring, and energizing. Over the years, the company has built a reputation for
+                            excellence in delivering a wide range of innovative office solutions aimed at enhancing
+                            employee productivity, engagement, and wellbeing.</p>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Middle Column -->
+                    <div class="col-md-4 my-3">
+                        <h6>Links:</h6>
+                        <ul class="list-unstyled">
+                            <li>
+                                Important: <a href="#">Terms & Conditions</a>, <a href="#">Privacy Policy</a>
+                            </li>
+                            <li>
+                                Useful: <a href="#">Icon Library</a>, <a href="#">Illustrations</a>
+                            </li>
+                            <li>
+                                Menu: <a href="#top">Home</a>, <a href="#details">Details</a>, <a
+                                    href="#services">Services</a>, <a href="#contact">
+                                    Contact
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Middle Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-4 my-3">
+                        <h6 class="mb-3">Follow Us:</h6>
+                        <div class="mb-4">
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-facebook fa-3x text-dark mx-2"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-x-twitter fa-3x text-dark mx-2"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-pinterest fa-3x text-dark mx-2"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-youtube fa-3x text-dark mx-2"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-instagram fa-3x text-dark mx-2"></i>
+                            </a>
+                        </div>
+                        <h6>Email Us:</h6>
+                        <p>We would love to hear from you <a
+                                href="mailto:contact@yavin.com"><strong>contact@yavin.com</strong></a></p>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+
+        </footer>
+        <!-- Footer -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
