to-top button and js

--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -538,6 +538,12 @@
 
         </footer>
         <!-- Footer -->
+
+        <!-- To Top Button -->
+        <button class="to-top-btn" id="to-top">
+            <img src="images/up-arrow.png" alt="Up Arrow" />
+        </button>
+        <!-- To Top Button -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
