basic text section

--- a/yavin-office-design/article.html
+++ b/yavin-office-design/article.html
@@ -72,6 +72,40 @@
         </section>
         <!-- Image -->
 
+        <!-- Basic Text -->
+        <section class="py-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 offset-lg-1">
+                        <p>Decorating and organizing an office setting for any company can be a complex, time-consuming
+                            process. It involves understanding the company's values and mission, as well as the needs
+                            and preferences of its employees. It also requires selecting the right furniture, lighting,
+                            and decorative elements that will enhance productivity and create a professional and
+                            welcoming environment. </p>
+                        <p class="mb-4">
+                            Furthermore, the process of organizing an office involves managing the office space
+                            effectively, from setting up workstations to managing storage and traffic flow. With so many
+                            factors to consider, it can be a challenging task to achieve a functional and appealing
+                            office setting that meets everyone's needs.
+                        </p>
+
+                        <h2 class="mb-3">Advantages of working with this company</h2>
+                        <p>Working for Yavin, an office space and decoration company, brings numerous advantages. The
+                            company emphasizes creativity and innovation, allowing employees to explore their talents
+                            and come up with new ideas. Additionally, Yavin emphasizes collaboration, teamwork, and
+                            communication, creating a supportive and nurturing environment.</p>
+                        <p class="mb-4">
+                            Working for this company also provides opportunities for personal and professional growth,
+                            allowing employees to develop and refine their skills in a dynamic and challenging industry.
+                            Finally, Yavin's dedication to sustainability and eco-friendliness provides employees with a
+                            sense of purpose and fulfillment, allowing them to contribute to a better world.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Basic Text -->
+
         <!-- Footer -->
         <footer class="footer bg-light py-6">
             <div class="container">
