cards objectives section

--- a/yavin-office-design/article.html
+++ b/yavin-office-design/article.html
@@ -106,6 +106,39 @@
         </section>
         <!-- Basic Text -->
 
+        <!-- Cards Objectives -->
+        <section class="my-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5><i class="fa-solid fa-check text-secondary"></i> High Quality Service</h5>
+                                <p>We strive on delivering and fulfilling the goals of our customers.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5><i class="fa-solid fa-check text-secondary"></i> Prompt Timely Service</h5>
+                                <p>Our turnaround is efficient and scaled in time depending on the designs plans.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5><i class="fa-solid fa-check text-secondary"></i> Skilled Team Involved</h5>
+                                <p>We have an excellent team to provides top quality results and service.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Cards Objectives-->
+
         <!-- Footer -->
         <footer class="footer bg-light py-6">
             <div class="container">
