gray box section and navbar config

--- a/yavin-office-design/article.html
+++ b/yavin-office-design/article.html
@@ -22,7 +22,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg sticky-top navbar-light">
             <div class="container">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <img src="images/logo.svg" alt="" width="124">
                 </a>
 
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="#home" class="nav-link" aria-current="page">Home</a>
+                            <a href="index.html" class="nav-link" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#details" class="nav-link">Details</a>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card my-3">
                             <div class="card-body">
                                 <h5><i class="fa-solid fa-check text-secondary"></i> Prompt Timely Service</h5>
                                 <p>Our turnaround is efficient and scaled in time depending on the designs plans.</p>
@@ -138,6 +138,31 @@
             </div>
         </section>
         <!-- Cards Objectives-->
+
+        <!-- Gray Box -->
+        <section class="my-6">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="card bg-light rounded-0 border-0 fs-6">
+                        <div class="card-body p-4">
+                            <h3>We Know What Our Customers Want</h3>
+                            <p>Customers of a decorating and organizing office settings typically want a space that is
+                                functional, aesthetically pleasing, and conducive to productivity. They may desire a
+                                modern
+                                or minimalist look, or prefer a more traditional or cozy atmosphere. The organization of
+                                the
+                                space is also important to ensure that everything has its place and is easily
+                                accessible.
+                                Storage solutions and ergonomic furniture may also be desired to increase comfort and
+                                efficiency. Ultimately, customers want an office space that reflects their personal
+                                style,
+                                promotes efficiency and productivity, and makes the workday more enjoyable.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Gray Box -->
 
         <!-- Footer -->
         <footer class="footer bg-light py-6">
