--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -22,7 +22,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg sticky-top navbar-light">
             <div class="container">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <img src="images/logo.svg" alt="" width="124">
                 </a>
 
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="#home" class="nav-link" aria-current="page">Home</a>
+                            <a href="#" class="nav-link" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#details" class="nav-link">Details</a>
