--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -19,8 +19,61 @@
     </head>
 
     <body>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
+            <div class="container">
+                <a href="#" class="navbar-brand">
+                    <img src="images/logo.svg" alt="" width="124">
+                </a>
 
-        <h1>Vera Website</h1>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle Navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="#home" class="nav-link" aria-current="page">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#solutiton" class="nav-link">Solutions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#details" class="nav-link">Details</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#expertise" class="nav-link">Expertise</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#pricing" class="nav-link">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#projects" class="nav-link">Projects</a>
+                        </li>
+                    </ul>
+                    <span class="nav-item">
+                        <span class="fa-stack">
+                            <a href="#">
+                                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-facebook-f fa-stack-1x text-white"></i>
+                            </a>
+                        </span>
+                    </span>
+                    <span class="nav-item">
+                        <span class="fa-stack">
+                            <a href="#">
+                                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-x-twitter fa-stack-1x text-white"></i>
+                            </a>
+                        </span>
+                    </span>
+                </div>
+        </nav>
+        <!-- Navbar -->
+
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
     </body>
