--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -97,6 +97,37 @@
         </header>
         <!-- Header -->
 
+        <!-- Partners -->
+        <section class="partner py-4 overflow-hidden">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 offset-lg-1">
+                        <h6 class="text-center mb-4 text-uppercase">
+                            Our Partners
+                        </h6>
+                        <div class="d-flex justify-content-center align-items-center text-center">
+                            <div>
+                                <img src="images/partner-logo-1.png" alt="Primester Logo" class="mx-4">
+                            </div>
+                            <div class="d-none d-sm-block">
+                                <img src="images/partner-logo-2.png" alt="Green App Logo" class="mx-4">
+                            </div>
+                            <div class="d-none d-md-block">
+                                <img src="images/partner-logo-3.png" alt="Volmeter Logo" class="mx-4">
+                            </div>
+                            <div class="d-none d-lg-block">
+                                <img src="images/partner-logo-4.png" alt="Volmeter Logo" class="mx-4">
+                            </div>
+                            <div class="d-none d-lg-block">
+                                <img src="images/partner-logo-4.png" alt="Amplifier Logo" class="mx-4">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Partners -->
+
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
