--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
             <div class="container">
                 <a href="#" class="navbar-brand">
-                    <img src="images/logo.svg" alt="" width="124">
+                    <img src="images/logo.svg" alt="" width="124" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -77,7 +77,7 @@
         <!-- Header -->
         <header class="header position-relative">
             <img src="images/vertical-decoration-left.svg" alt=""
-                class="vertical-decoration position-absolute d-none d-md-block">
+                class="vertical-decoration position-absolute d-none d-md-block" />
 
             <div class="container">
                 <div class="row">
@@ -107,19 +107,19 @@
                         </h6>
                         <div class="d-flex justify-content-center align-items-center text-center">
                             <div>
-                                <img src="images/partner-logo-1.png" alt="Primester Logo" class="mx-4">
+                                <img src="images/partner-logo-1.png" alt="Primester Logo" class="mx-4" />
                             </div>
                             <div class="d-none d-sm-block">
-                                <img src="images/partner-logo-2.png" alt="Green App Logo" class="mx-4">
+                                <img src="images/partner-logo-2.png" alt="Green App Logo" class="mx-4" />
                             </div>
                             <div class="d-none d-md-block">
-                                <img src="images/partner-logo-3.png" alt="Volmeter Logo" class="mx-4">
+                                <img src="images/partner-logo-3.png" alt="Volmeter Logo" class="mx-4" />
                             </div>
                             <div class="d-none d-lg-block">
-                                <img src="images/partner-logo-4.png" alt="Volmeter Logo" class="mx-4">
+                                <img src="images/partner-logo-4.png" alt="Volmeter Logo" class="mx-4" />
                             </div>
                             <div class="d-none d-lg-block">
-                                <img src="images/partner-logo-4.png" alt="Amplifier Logo" class="mx-4">
+                                <img src="images/partner-logo-4.png" alt="Amplifier Logo" class="mx-4" />
                             </div>
                         </div>
                     </div>
@@ -127,6 +127,76 @@
             </div>
         </section>
         <!-- Partners -->
+
+        <!-- Form Area -->
+        <section class="contact my-7" id="contact">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-6">
+                        <h2 class="fw-bold">
+                            Get More Information
+                        </h2>
+                        <hr class="hr-heading" />
+                        <p class="lead">
+                            We provide innovative software solutions that empower businesses to thrive in the digital
+                            era.
+                        </p>
+                        <ul class="list-unstyle lh-lg">
+                            <li class="d-flex align-items-center">
+                                <i class="fa-solid fa-check text-primary mx-3"></i>
+                                <div>
+                                    <strong>Customized Solutions: </strong> Our solutions are designed to meet your
+                                    specific business needs, ensuring maximum efficiency and productivity.
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <i class="fa-solid fa-check text-primary mx-3"></i>
+                                <div>
+                                    <strong>Seamless Integration: </strong> We seamlessly integrate our software with
+                                    your existing systems, minimizing disruptions and optimizing workflows.
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-5 offset-md-1">
+                        <form>
+                            <div class="mb-4">
+                                <input type="text" class="form-control bg-secondary" placeholder="Enter Name" />
+                            </div>
+                            <div class="mb-4">
+                                <input type="email" class="form-control bg-secondary" placeholder="Enter Email" />
+                            </div>
+                            <div class="mb-4">
+                                <input type="tel" class="form-control bg-secondary" placeholder="Enter Phone" />
+                            </div>
+                            <div class="mb-4">
+                                <select name="interested" id="interested" class="form-control bg-secondary">
+                                    <option>Interested In...</option>
+                                    <option value="erp">ERP Solution</option>
+                                    <option value="crm">CRM Solution</option>
+                                    <option value="cms">CMS Solution</option>
+                                    <option value="sfa">SFA Solution</option>
+                                </select>
+                            </div>
+                            <div class="mb-4 form-check">
+                                <input type="checkbox" id="agree-check" />
+                                <label for="agree-check" class="form-check-label">
+                                    I agree to the <a href="privacy.html">Privacy Policy</a>
+                                </label>
+                            </div>
+                            <div class="d-grid gap-2">
+                                <input type="submit" value="Submit" class="input btn btn-primary text-white" />
+                            </div>
+                        </form>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Form Area -->
 
 
         <script src="js/bootstrap.bundle.min.js"></script>
