--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -215,7 +215,7 @@
                     <!-- Solutions Row 1 -->
                     <div class="col-md-6 mb-4">
                         <div class="card bg-secondary">
-                            <img src="images/solution-1.jpg" alt="ERP Problem Solving" class="card-img-top">
+                            <img src="images/solution-1.jpg" alt="ERP Problem Solving" class="card-img-top" />
                             <div class="card-body">
                                 <h5 class="card-time fw-bold">ERP Software Solutions</h5>
                                 <p class="card-text">
@@ -231,7 +231,7 @@
                     </div>
                     <div class="col-md-6 mb-4">
                         <div class="card bg-secondary">
-                            <img src="images/solution-2.jpg" alt="CRM Problem Solving" class="card-img-top">
+                            <img src="images/solution-2.jpg" alt="CRM Problem Solving" class="card-img-top" />
                             <div class="card-body">
                                 <h5 class="card-time fw-bold">CRM Software Solutions</h5>
                                 <p class="card-text">
@@ -246,7 +246,7 @@
                     <!-- Solutions Row 1 -->
                     <div class="col-md-6 mb-4">
                         <div class="card bg-secondary">
-                            <img src="images/solution-3.jpg" alt="SFA Problem Solving" class="card-img-top">
+                            <img src="images/solution-3.jpg" alt="SFA Problem Solving" class="card-img-top" />
                             <div class="card-body">
                                 <h5 class="card-time fw-bold">SFA Software Solutions</h5>
                                 <p class="card-text">
@@ -260,7 +260,7 @@
                     </div>
                     <div class="col-md-6 mb-4">
                         <div class="card bg-secondary">
-                            <img src="images/solution-4.jpg" alt="WMS Problem Solving" class="card-img-top">
+                            <img src="images/solution-4.jpg" alt="WMS Problem Solving" class="card-img-top" />
                             <div class="card-body">
                                 <h5 class="card-time fw-bold">WMS Software Solutions</h5>
                                 <p class="card-text">
@@ -277,6 +277,46 @@
             </div>
         </section>
         <!-- Solutions -->
+
+        <!-- Details 1 -->
+        <section class="details my-5 position-relative" id="detials">
+            <div class="container">
+                <div class="row pt-5">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <h2 class="fw-bold">Evaluation & Deployment</h2>
+                        <hr class="hr-heading" />
+                        <p>We offer comprehensive evaluation and deployment services to ensure a smooth and successful
+                            implementation of our software solutions.</p>
+                        <ul class="list-unstyle lh-lg">
+                            <li class="d-flex align-items-center">
+                                <i class="fa-solid fa-check text-primary mx-3"></i>
+                                <div>
+                                    <strong>Customized Solutions: </strong>We tailor our solutions to align with your
+                                    unique business needs.
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <i class="fa-solid fa-check text-primary mx-3"></i>
+                                <div>
+                                    <strong>Seamless Integration: </strong>Our team ensures smooth integration of the
+                                    software into your existing infrastructure, minimizing disruptions.
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <img src="images/details-1.jpg" alt="Women looking at tablet" class="img-fluid rounded-2" />
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+            <img src="images/vertical-decoration-left.svg" alt=""
+                class="vertical-decoration position-absolute d-none d-md-block" />
+        </section>
+        <!-- Details 1 -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
