--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -318,6 +318,47 @@
         </section>
         <!-- Details 1 -->
 
+        <!-- Details 2 -->
+        <section class="details-2 my-5 position-relative">
+            <div class="container">
+                <div class="row pt-5">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <img src="images/details-2.jpg" alt="Our team working together" class="img-fluid rounded-2" />
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <h2 class="fw-bold">Maintenance & Support</h2>
+                        <hr class="hr-heading" />
+                        <p>We provide comprehensive maintenance and support services to ensure the smooth and
+                            uninterrupted operation of your software solutions. <a href="#">Learn more about our support
+                                services.</a></p>
+                        <ul class="list-unstyle lh-lg">
+                            <li class="d-flex align-items-center">
+                                <i class="fa-solid fa-check text-primary mx-3"></i>
+                                <div>
+                                    <strong>Proactive Maintenance: </strong>We proactively monitor and maintain your
+                                    software solutions to prevent issues and optimize performance.
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <i class="fa-solid fa-check text-primary mx-3"></i>
+                                <div>
+                                    <strong>Timely Updates: </strong>We ensure your software is up to date with the
+                                    latest features, security patches, and enhancements.
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+            <img src="images/vertical-decoration-right.svg" alt=""
+                class="vertical-decoration position-absolute d-none d-md-block" />
+        </section>
+        <!-- Details 2 -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
         <script src="js/script.js"></script>
