--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -359,6 +359,120 @@
         </section>
         <!-- Details 2 -->
 
+
+        <!-- Expertise -->
+        <section class="expertise bg-secondary py-5 my-6" id="expertise">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
+                        <h5>
+                            <span class="badge bg-primary rounded-0 text-uppercase">Expertise</span>
+                        </h5>
+                        <h2 class="fw-bold">Expertise Strong Points</h2>
+                        <p>We take pride in our expertise. With years of experience and a dedicated team, we deliver
+                            exceptional software solutions tailored to your needs. Our strong points include:</p>
+                    </div>
+                </div>
+                <!-- Expertise Row 1 -->
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-lightbulb fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Flexible Services</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-display fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Flexible Services</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-wifi fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Easy To Use</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-gear fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Smart Options</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Expertise Row 1 -->
+                <!-- Expertise Row 2 -->
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-glasses fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Advanced Tech</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-graduation-cap fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Good Expertise</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-chart-bar fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Detailed Reports</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-transparent border-0 text-center mb-3">
+                            <div class="card-image">
+                                <i class="fa-solid fa-cloud fa-5x text-primary"></i>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Cloud Storage</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Expertise Row 2 -->
+            </div>
+        </section>
+        <!-- Expertise -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
         <script src="js/script.js"></script>
