--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -507,8 +507,22 @@
                     </div>
                 </div>
             </div>
+            <!-- Video Modal -->
+            <div class="video-modal">
+                <div class="modal fade" id="videoModal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="ratio ratio-16x9">
+                                <iframe frameborder="0" class="embed-responsive-item" id="video"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Video Modal -->
         </div>
         <!-- Video -->
+
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
