--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -524,6 +524,110 @@
         <!-- Video -->
 
 
+        <!-- Pricing -->
+        <section class="pricing my-6" id="pricing">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
+                        <h5>
+                            <span class="badge bg-primary rounded-0 text-uppercase">
+                                Pricing
+                            </span>
+                        </h5>
+                        <h2 class="fw-bold">
+                            Flexible Pricing Options
+                        </h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <!-- Pricing Column 1 -->
+                    <div class="col-md-3 mb-3">
+                        <div class="card bg-secondary text-center rounded-0 h-100">
+                            <div class="card-body">
+                                <div class="xl-text fw-bold">$99</div>
+                                <h4 class="card-title text-primary text-uppercase fw-bold mb-5">
+                                    Standard
+                                </h4>
+                                <p>Our standard pricing plan offers a comprehensive set of features for your software
+                                    needs.</p>
+                                <ul class="list-unstyled lh-lg mt-5">
+                                    <li class="text-uppercase fs-5 fw-bold">
+                                        Subscribers List
+                                    </li>
+                                    <li class="text-uppercase fs-5 fw-bold">
+                                        User Admin Control
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="card-footer bg-transparent border-0">
+                                <a href="#contact" class="btn btn-primary text-white mt-4 mb-3 fw-bold">
+                                    Inquire
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Pricing Column 1 -->
+                    <!-- Pricing Column 2 -->
+                    <div class="col-md-3 mb-3">
+                        <div class="card bg-secondary text-center rounded-0 h-100">
+                            <div class="card-body">
+                                <div class="xl-text fw-bold">$199</div>
+                                <h4 class="card-title text-primary text-uppercase fw-bold mb-5">
+                                    Advanced
+                                </h4>
+                                <p>Unlock additional enhanced capabilities. Take your software solutions to the next
+                                    level.</p>
+                                <ul class="list-unstyled lh-lg mt-5">
+                                    <li class="text-uppercase fs-5 fw-bold">
+                                        Limited Storage Space
+                                    </li>
+                                    <li class="text-uppercase fs-5 fw-bold">
+                                        Free Cloud Storage
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <div class="card-footer bg-transparent border-0">
+                                <a href="#contact" class="btn btn-primary text-white mt-4 mb-3 fw-bold">
+                                    Inquire
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Pricing Column 2 -->
+                    <!-- Pricing Column 3 -->
+                    <div class="col-md-3 mb-3">
+                        <div class="card bg-secondary text-center rounded-0 h-100">
+                            <div class="card-body">
+                                <div class="xl-text fw-bold">$99</div>
+                                <h4 class="card-title text-primary text-uppercase fw-bold mb-5">
+                                    Complete
+                                </h4>
+                                <p>Our complete pricing plan offers an all-inclusive package with advanced features.</p>
+                                <ul class="list-unstyled lh-lg mt-5">
+                                    <li class="text-uppercase fs-5 fw-bold">
+                                        Deployment Protocol
+                                    </li>
+                                    <li class="text-uppercase fs-5 fw-bold">
+                                        Premium Support Pack
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <div class="card-footer bg-transparent border-0">
+                                <a href="#contact" class="btn btn-primary text-white mt-4 mb-3 fw-bold">
+                                    Inquire
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Pricing Column 3 -->
+                </div>
+            </div>
+        </section>
+        <!-- Pricing -->
+
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
         <script src="js/script.js"></script>
